# llama-cpp-wasm

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT.md  LICENSE  README.md  TESTING.md  a.out.js  a.out.wasm  package-lock.json  package.json  release-manifest.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
cmake/: mtmd-shim.cmake
cpp/: bridge.cpp
demo/: index.html  main.ts  markdown.ts  pdf.ts  style.css
scripts/: build-wasm.sh  fetch-llama.sh
src/: async-queue.ts  index.ts  presets.ts  protocol.ts  runtime.ts  types.ts  worker.ts
tests/browser/: smoke.mjs
